WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38897
Fix guard around DatabaseSync
https://bugs.webkit.org/show_bug.cgi?id=38897
Summary
Fix guard around DatabaseSync
Young Han Lee
Reported
2010-05-11 04:13:50 PDT
The closing guard must be below the namespace brace.
Attachments
Patch
(906 bytes, patch)
2010-05-11 04:20 PDT
,
Young Han Lee
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Young Han Lee
Comment 1
2010-05-11 04:20:28 PDT
Created
attachment 55688
[details]
Patch
Dumitru Daniliuc
Comment 2
2010-05-11 04:25:22 PDT
Comment on
attachment 55688
[details]
Patch
> Index: WebCore/storage/DatabaseSync.cpp > =================================================================== > --- WebCore/storage/DatabaseSync.cpp (revision 59147) > +++ WebCore/storage/DatabaseSync.cpp (working copy) > @@ -107,6 +107,7 @@ ScriptExecutionContext* DatabaseSync::sc > return m_scriptExecutionContext.get(); > } > > +} // namespace WebCore > + > #endif // ENABLE(DATABASE) > > -} // namespace WebCore
oops... thanks for noticing this. lgtm, fwiw.
Kwang Yul Seo
Comment 3
2010-05-16 21:16:55 PDT
> oops... thanks for noticing this. lgtm, fwiw.
Ping. review+ and commit-queue+ please.
Eric Seidel (no email)
Comment 4
2010-05-20 01:05:52 PDT
Comment on
attachment 55688
[details]
Patch LGTM.
WebKit Commit Bot
Comment 5
2010-05-21 05:19:16 PDT
Comment on
attachment 55688
[details]
Patch Clearing flags on attachment: 55688 Committed
r59927
: <
http://trac.webkit.org/changeset/59927
>
WebKit Commit Bot
Comment 6
2010-05-21 05:19:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug