2010-05-21  Young Han Lee  <joybro@company100.net>

Reviewed by Eric Seidel.

        Fix guard around DatabaseSync
        https://bugs.webkit.org/show_bug.cgi?id=38897

        * storage/DatabaseSync.cpp:

Canonical link: https://commits.webkit.org/51020@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59927 268f45cc-cd09-0410-ab3c-d52691b4dbfc